--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>My First Parcel App</title>
+    <title>AWS CDK</title>
+    <script type="module" src="app.js"></script>
   </head>
   <body>
-    <h1>Hello, World!</h1>
   </body>
 </html>
